Set properties for tmdb

--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/Users/jesusabv93/Library/Android/sdk
+ApiKey=746e3d3f16f9d321da1599c12963a3c5
+BaseUrl=https://api.themoviedb.org
